# atbot

./: .gitignore  README.md  at_parser.py  bot.py  bot_config.toml  context_manager.py  demo.py  log.py  message_handler.py  plugin_manager.py  pyproject.toml  read_config.py  reply_tracker.py  requirements.txt  smart_reply.py  type_analysis.py  user_cache.py  user_info_fetcher.py
.trae/documents/: 优化配置读取与错误处理.md
config/: .env  adapter_config.toml  bot_config.toml  errors.py
data/: Group_members_name.txt  Image_description_cache.txt  Message_frequency_cache.txt  read_the_username.py
llm/: Image_recognition.py  if_module.py  send_message.py
plugin/hello_world2_plugin/: config.toml  plugin.py
plugin/hello_world_puling/: config.toml  plugin.py
plugin/发消息_plugin/: config.toml  plugin.py
plugin/随机话题_plugin/: config.toml  plugin.py
scripts/: show_config.py  validate_config.py
